# star-tactics-room

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  knowledge_base.json  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
api/: main.py
api/tests/tests/: test_playwright_e2e.py
data/: ai_ml_data.py  algorithms_data.py  cloud_infrastructure_data.py  database_data.py  design_patterns_data.py  enhanced_knowledge_data.py  load_all_data.py  programming_knowledge.py  security_data.py
examples/: README.md  __init__.py  integration_demo.py
src/star_tactics/: __init__.py
src/star_tactics/models/: __init__.py  knowledge_node.py  link_management.py
src/star_tactics/services/: __init__.py
src/star_tactics/storage/: __init__.py
tests/: conftest.py
tests/unit/: test_integration.py  test_knowledge_node.py  test_link_management.py  test_link_management_with_storage.py  test_search.py  test_storage.py
